[MinGW] Fixed C99/C++11 format attributes in printf-like functions https://bugs.webkit.org/show_bug.cgi?id=164448

Reviewed by Michael Catanzaro.

By default MinGW uses printf-like function provided in msvcrt.dll,
however they miss support for C99/C++11 format attributes. Use MinGW
implementations instead.

.:

* Source/cmake/OptionsCommon.cmake: Define __USE_MINGW_ANSI_STDIO

Source/WTF:

* wtf/Assertions.h: Use gnu_printf format in WTF_ATTRIBUTE_PRINTF


Canonical link: https://commits.webkit.org/182155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208418 268f45cc-cd09-0410-ab3c-d52691b4dbfc